petitions update
